@@ -1,4 +1,5 @@
-#	$OpenBSD: Makefile.inc,v 1.5 1995/02/27 13:28:19 cgd Exp $
+#	$OpenBSD: Makefile.inc,v 1.2 1996/08/19 08:31:01 tholo Exp $
+#	@(#)Makefile.inc	8.1 (Berkeley) 6/4/93
 
 # regex sources
 .PATH: ${.CURDIR}/regex
