@@ -1,4 +1,4 @@
-.\"	$OpenBSD: re_format.7,v 1.5 1995/02/27 13:28:52 cgd Exp $
+.\"	$OpenBSD: re_format.7,v 1.2 1996/08/19 08:31:08 tholo Exp $
 .\"
 .\" Copyright (c) 1992, 1993, 1994 Henry Spencer.
 .\" Copyright (c) 1992, 1993, 1994
@@ -34,6 +34,8 @@
 .\" LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
+.\"
+.\"	@(#)re_format.7	8.3 (Berkeley) 3/20/94
 .\"
 .TH RE_FORMAT 7 "March 20, 1994"
 .SH NAME
